--- a/index.html
+++ b/index.html
@@ -4,24 +4,12 @@
     <meta charset="UTF-8">
     <title>Angello Lite</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
-
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<div ng-controller="MainCtrl as main">
-    <div class="col-md-4">
-        <h2>Stories</h2>
+<div data-ng-view=""></div>
 
-        <story class="callout"
-                ng-repeat="story in main.stories">
-        </story>
-
-        <a class="btn btn-primary" ng-click="main.createStory()">
-            <span class="glyphicon glyphicon-plus"></span>
-        </a>
-    </div>
-</div>
+<script src="vendor/head.load.min.js"></script>
+<script src="assets/js/boot.js"></script>
 </body>
 </html>
