Home screen layout.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en" data-ng-app="Angello">
 <head>
     <meta charset="UTF-8">
-    <title>Angello Lite</title>
+    <title>Angello</title>
 
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap-theme.min.css">
+
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/angello.css">
 </head>
 <body>
+
 <div data-ng-view=""></div>
 
 <script src="vendor/head.load.min.js"></script>
