Chapter 3 finished. We can:  - create  - update  - delete  stories.

--- a/src/storyboard/tmpl/storyboard.html
+++ b/src/storyboard/tmpl/storyboard.html
@@ -3,11 +3,14 @@
         <ul class="list" ng-repeat="status in ::storyboard.statuses">
             <h3 class="status">{{::status.name}}</h3>
             <hr/>
-            <li class="story" ng-repeat="story in storyboard.stories
-            | filter: {status:status.name}">
+            <li class="story"
+                ng-repeat="story in storyboard.stories | filter: {status:status.name}"
+                ng-click="storyboard.selectStory(story)">
                 <article>
                     <div>
-                        <button type="button" class="close">x</button>
+                        <button type="button" class="close"
+                                ng-click="storyboard.deleteStory(story)">x
+                        </button>
                         <p class="title">{{story.title}}</p>
                     </div>
                     <div class="type-bar {{story.type}}"></div>
@@ -17,5 +20,122 @@
                 </article>
             </li>
         </ul>
+    </div>
+</div>
+
+<div class="details">
+    <h3>Card Details</h3>
+
+    <form name="storyboard.detailsForm">
+        <div class="form-group">
+            <div class="controls">
+                <label class="control-label" for="inputTitle">*Title</label>
+                <input type="text" id="inputTitle" name="inputTitle"
+                       placeholder="Title"
+                       ng-model="storyboard.editedStory.title"
+                       ng-required="true"
+                       ng-minlength="3"
+                       ng-maxlength="30"
+                       class="form-control">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="controls">
+                <label class="control-label" for="inputStatus">*Status</label>
+                <select id="inputStatus" name="inputStatus"
+                        data-ng-model="storyboard.editedStory.status"
+                        ng-options="status.name as status.name for status in storyboard.statuses"
+                        ng-required="true"
+                        class="form-control">
+                    <option value="">Please select...</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="controls">
+                <label class="control-label" for="inputType">*Type</label>
+                <select id="inputType" name="inputType"
+                        data-ng-model="storyboard.editedStory.type"
+                        ng-options="type.name as type.name for type in storyboard.types"
+                        ng-required="true"
+                        class="form-control">
+                    <option value="">Please select...</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="controls">
+                <label class="control-label" for="inputDescription">Description</label>
+                <textarea id="inputDescription" name="inputDescription"
+                          placeholder="Description"
+                          rows="4"
+                          data-ng-model="storyboard.editedStory.description"
+                          ng-maxlength="255"
+                          class="form-control"></textarea>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="controls">
+                <label class="control-label" for="inputCriteria">Acceptance Criteria</label>
+                <textarea id="inputCriteria" name="inputCriteria"
+                          placeholder="Criteria"
+                          rows="4"
+                          data-ng-model="storyboard.editedStory.criteria"
+                          ng-maxlength="255"
+                          class="form-control"></textarea>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="controls">
+                <label class="control-label" for="inputReporter">*Reporter</label>
+                <select id="inputReporter" name="inputReporter"
+                        data-ng-model="storyboard.editedStory.reporter"
+                        ng-options="user.id as user.name for user in storyboard.users"
+                        ng-required="true"
+                        class="form-control">
+                    <option value="">Please select...</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="controls">
+                <label class="control-label" for="inputAssignee">*Assignee</label>
+                <select id="inputAssignee" name="inputAssignee"
+                        data-ng-model="storyboard.editedStory.assignee"
+                        ng-options="user.id as user.name for user in storyboard.users"
+                        ng-required="true"
+                        class="form-control">
+                    <option value="">Please select...</option>
+                </select>
+            </div>
+        </div>
+    </form>
+
+    <hr/>
+
+    <div ng-if="storyboard.currentStory">
+        <button class="btn btn-default"
+                ng-click="storyboard.cancelUpdate()">Cancel
+        </button>
+        <button class="btn pull-right btn-default"
+                data-ng-disabled="!storyboard.detailsForm.$valid"
+                ng-click="storyboard.updateStory()">Update Story
+        </button>
+    </div>
+
+    <div ng-if="!storyboard.currentStory">
+        <button class="btn btn-default"
+                ng-click="storyboard.cancelUpdate()">Cancel
+        </button>
+        <button class="btn pull-right btn-default"
+                data-ng-disabled="!storyboard.detailsForm.$valid"
+                ng-click="storyboard.createStory()">Create Story
+        </button>
     </div>
 </div>
