--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 </head>
 <body>
 
+<div class="navbar navbar-fixed-top navbar-default">
+    <div class="navbar-header pull-left">
+        <a class="logo navbar-brand" href="#/">
+            <img src="assets/img/angello.png"/>
+        </a>
+    </div>
+</div>
+
 <div data-ng-view=""></div>
 
 <script src="vendor/head.load.min.js"></script>
