--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" data-ng-app="Angello">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Angello</title>
+
+    <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap-theme.min.css">
@@ -16,6 +18,14 @@
     <div class="navbar-header pull-left">
         <a class="logo navbar-brand" href="#/">
             <img src="assets/img/angello.png"/>
+        </a>
+    </div>
+    <div class="btn-group pull-right">
+        <a class="btn btn-danger" href="#/">
+            <span class="glyphicon glyphicon-home"></span>
+        </a>
+        <a class="btn btn-danger" href="#/dashboard">
+            <span class="glyphicon glyphicon-signal"></span>
         </a>
     </div>
 </div>
