--- a/src/dashboard/tmpl/dashboard.html
+++ b/src/dashboard/tmpl/dashboard.html
@@ -2,11 +2,15 @@
     <h3>User Stories by Status</h3>
     <hr/>
     <div class="chart-container">
-        <div chart class="chart-placeholder"></div>
+        <div chart class="chart-placeholder"
+             source-array="dashboard.stories" source-property="status"
+             reference-array="dashboard.statuses" reference-property="name"></div>
     </div>
     <h3>User Stories by Type</h3>
     <hr/>
     <div class="chart-container">
-        <div chart class="chart-placeholder"></div>
+        <div chart class="chart-placeholder"
+             source-array="dashboard.stories" source-property="type"
+             reference-array="dashboard.types" reference-property="name"></div>
     </div>
 </div>
