Animations.... Chrome kuszkodik vele.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/angello.css">
+    <link rel="stylesheet" href="assets/css/animations.css">
 </head>
 <body ng-class="{loading:loadingView}">
 
@@ -30,7 +31,7 @@
     </div>
 </div>
 
-<div data-ng-view=""></div>
+<div data-ng-view="" class="my-fade-animation"></div>
 
 <div class="modal"></div>
 
