Headjs az érezhetően megbízhatóbban működő LABjs-re cserélve.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <div class="modal"></div>
 
-<script src="vendor/head.load.min.js"></script>
+<script src="vendor/LAB.min.js"></script>
 <script src="assets/js/boot.js"></script>
 </body>
 </html>
