--- a/src/storyboard/tmpl/storyboard.html
+++ b/src/storyboard/tmpl/storyboard.html
@@ -74,6 +74,19 @@
                            ng-maxlength="30"
                            class="form-control">
                 </div>
+                <div class="alert alert-warning"
+                     ng-messages="storyboard.detailsForm.inputTitle.$error"
+                     ng-if="storyboard.showErrorMessages('inputTitle')">
+                    <div ng-message="required">
+                        <small>This field is required!</small>
+                    </div>
+                    <div ng-message="minlength">
+                        <small>This field is too short!</small>
+                    </div>
+                    <div ng-message="maxlength">
+                        <small>This field is too long!</small>
+                    </div>
+                </div>
             </div>
 
             <div class="form-group">
